# KeyHolderManager

./: CMakeLists.txt  CMakePresets.json  KeyHolderManager.cpp  KeyHolderManager.h  README.md  vcpkg.json
ImguiImpl/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
include/: DataBase.h  Includes.h  KeyContainer.h  PasswordGenerator.h  SafeString.h  Themes.h
source/: DataBase.cpp  KeyContainer.cpp  PasswordGenerator.cpp  SafeString.cpp  Themes.cpp
